--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -78,6 +78,8 @@
   --z-header:         1000;
   --z-overlay:        1100;
   --z-tooltip:        1200;
+
+  --banner-offset: 0px;
 }
 
 /* Dark mode preserved for future use (not active)
