--- a/partials/footer.html
+++ b/partials/footer.html
@@ -11,7 +11,7 @@
       <div class="signature-slot">
         <a href="/pages/about/" aria-label="About Jennifer Bowman">
           <img
-            src="/assets/img/ui/jennifer.svg?v=20251123233107"
+            src="/assets/img/ui/jennifer.svg?v=20251124005149"
             alt="Jennifer Bowman signature with butterfly"
             title="Jennifer Bowman"
           />
@@ -66,6 +66,8 @@
   </div>
 </footer>
 
-<div class="floating-butterfly" aria-hidden="true">
-  <img src="/assets/img/ui/hero-butterfly-wow.svg?v=20251123233107" alt="">
+<div class="floating-butterfly-wrapper">
+  <div class="floating-butterfly" aria-hidden="true">
+    <img src="/assets/img/ui/hero-butterfly-wow.svg?v=20251124005149" alt="">
+  </div>
 </div>
