--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<!-- /site/partials/footer.html -->
+<!-- BEGIN: /content/partials/footer.html -->
 <footer class="site-footer" data-partial="footer" role="contentinfo">
   <div class="footer-inner container">
     <section class="footer-brand">
@@ -11,7 +11,7 @@
       <div class="signature-slot">
         <a href="/pages/about/" aria-label="About Jennifer Bowman">
           <img
-            src="/assets/img/ui/jennifer.svg?v=20251124162559"
+            src="/assets/img/ui/jennifer.svg?v=20251125232252"
             alt="Jennifer Bowman signature with butterfly"
             title="Jennifer Bowman"
           />
@@ -68,6 +68,7 @@
 
 <div class="floating-butterfly-wrapper">
   <div class="floating-butterfly" aria-hidden="true">
-    <img src="/assets/img/ui/hero-butterfly-wow.svg?v=20251124162559" alt="">
+    <img src="/assets/img/ui/hero-butterfly-wow.svg?v=20251125232252" alt="">
   </div>
 </div>
+<!-- END: /content/partials/footer.html -->
